--- a/engine/Makefile
+++ b/engine/Makefile
@@ -9,7 +9,7 @@ SRC = $(wildcard $(SRC_DIR)/*.c)
 OUT_JS = $(BUILD_DIR)/main.js
 
 CFLAGS = -O2
-EMCC_FLAGS = -s EXPORTED_RUNTIME_METHODS="['cwrap', 'UTF8ToString']" -s MODULARIZE=1 -s EXPORT_NAME="EngineModule" -s ASSERTIONS=1 -s ALLOW_MEMORY_GROWTH=1
+EMCC_FLAGS = -s EXPORTED_RUNTIME_METHODS="['cwrap', 'UTF8ToString']" -s MODULARIZE=1 -s EXPORT_NAME="EngineModule" -s ASSERTIONS=1 -s ALLOW_MEMORY_GROWTH=1 -g
 
 all: $(OUT_JS)
 
