--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,8 +1,9 @@
-FROM gcc-alpine
+FROM alpine:latest
 
 
+RUN apk update && apk add gcc musl-dev make
 WORKDIR app
 COPY . .
 RUN make
 
-CMD ["./build/server"]
+CMD ["./entrypoint.sh"]
